--- a/app/styles/_reset.scss
+++ b/app/styles/_reset.scss
@@ -8,7 +8,7 @@ ul {
 }
 
 .section {
-  padding: 0;
+  padding: 1rem;
   margin: 0 auto;
 }
 
